# metal-font-renderrer

./: .gitignore  CMakeLists.txt  README  main.cpp
lib/metal-cmake/: Makefile  cmake_install.cmake
lib/metal-cmake/Testing.build/Debug/METAL_CPP.build/Objects-normal/arm64/: METAL_CPP.LinkFileList  definition.d
lib/msdfgen/: CMakeLists.txt  Makefile  cmake_install.cmake  msdfgenBinaryTargets.cmake  msdfgenConfig.cmake  msdfgenConfigVersion.cmake  msdfgenTargets.cmake
lib/msdfgen/CMakeScripts/: ReRunCMake.make
lib/msdfgen/Testing.build/Debug/msdfgen-core.build/Objects-normal/arm64/: Contour.d  EdgeHolder.d  MSDFErrorCorrection.d  Projection.d  Scanline.d  Shape.d  SignedDistance.d  Vector2.d  contour-combiners.d  edge-coloring.d  edge-segments.d  edge-selectors.d  equation-solver.d  msdf-error-correction.d  msdfgen-core.LinkFileList  msdfgen.d  rasterization.d  render-sdf.d  save-bmp.d  save-tiff.d  sdf-error-estimation.d  shape-description.d
lib/msdfgen/Testing.build/Debug/msdfgen-ext.build/Objects-normal/arm64/: import-font.d  import-svg.d  lodepng.d  msdfgen-ext.LinkFileList  resolve-shape-geometry.d  save-png.d  tinyxml2.d
lib/msdfgen/Testing.build/Debug/msdfgen.build/Objects-normal/arm64/: main.d  msdfgen.LinkFileList
lib/msdfgen/ext/: import-font.cpp  import-svg.cpp
lib/msdfgen/msdfgen.xcodeproj/: project.pbxproj
